WebAnimations API doesn't properly apply keyframe easings to transforms https://bugs.webkit.org/show_bug.cgi?id=210526 <rdar://problem/61800424>

Reviewed by Antti Koivisto.

Source/WebCore:

GraphicsLayerCA has code that determines whether an animation can be accelerated looking at the timing function of its keyframes and excluding
animations that use a steps timing function as one of its values. However, we we would fail to set the timing function on the KeyframeValue for
each keyframe in the KeyframeList we create for a JS-originated animation. We now do this correctly.

Test: webanimations/transform-animation-with-steps-timing-function-not-accelerated.html

* animation/KeyframeEffect.cpp:
(WebCore::KeyframeEffect::updateBlendingKeyframes):

LayoutTests:

Add a new test that checks that an animation targeting an accelerted property does not yield an accelerated animation if one of its keyframes contains a steps timing function.

* webanimations/transform-animation-with-steps-timing-function-not-accelerated-expected.txt: Added.
* webanimations/transform-animation-with-steps-timing-function-not-accelerated.html: Added.

Canonical link: https://commits.webkit.org/223620@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260360 268f45cc-cd09-0410-ab3c-d52691b4dbfc